--- a/user/css/user.css
+++ b/user/css/user.css
@@ -87,27 +87,52 @@ section {
   font-size: 1rem;
 }
 
+/* Alert chung */
+.order-alert {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 6px;
+    color: #f40400;             
+    font-size: 18px;
+    font-weight: bold;
+    animation: blink 1.2s infinite;
+    vertical-align: middle;
+}
+
 /*Cảnh báo đơn hàng*/
 .order-link {
     position: relative;
     display: inline-block;
 }
 
-.order-alert {
-    position: absolute;
-    top: 8px;
-    right: 20px;
-    color: #dc2626; 
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 1;
-}
 
 
 .hidden {
     display: none;
+
 }
 
+
+#account-order-alert {
+    position: relative;
+    top: -1px;      
+    right:10px ;           
+    font-size: 15px;           
+}
+
+
+/* Ẩn */
+.hidden {
+    display: none !important;
+}
+
+/* Nhấp nháy nhẹ */
+@keyframes blink {
+    0%   { opacity: 1; }
+    50%  { opacity: 0.3; }
+    100% { opacity: 1; }
+}
 
 
 
