--- a/admin/report/css/report_year.css
+++ b/admin/report/css/report_year.css
@@ -62,15 +62,16 @@ tr:hover td {
 
 /* ===== Chart Container ===== */
 .chart-container {
-    width: 100%;
-    max-width: 850px;
-    height: 400px;
-    margin: 30px auto;
-    padding: 15px;
-    background: #fff;
-    border: 1px solid #eee;
-    border-radius: 5px;
+    width: 90%;
+    height: 600px;       
+    max-width: 800px;    
+    margin: 0 auto 40px;
 }
+
+canvas {
+    max-width: 100% !important;
+}
+
 
 /* ===== Back Button ===== */
 .back-button {
