--- a/user/css/user.css
+++ b/user/css/user.css
@@ -18,8 +18,9 @@ header {
 }
 
 header h1 {
-  font-size: 26px;
+  font-size: 35px;
   margin: 0;
+  color:#f7f7f7 ;
 }
 
 nav ul {
@@ -47,25 +48,6 @@ nav a:hover {
   box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
 }
 
-
-@media (max-width: 600px) {
-  nav ul {
-      flex-direction: column;
-      gap: 10px;
-  }
-
-  header h1 {
-      font-size: 24px;
-  }
-}
-
-main {
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 30px;
-}
 
 
 
